--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A picture sharing site.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "rm -rf dist && webpack --mode production",
     "dev": "webpack serve --mode development"
   },
   "keywords": [],
@@ -26,6 +26,7 @@
     "webpack-dev-server": "4.9.3"
   },
   "dependencies": {
-    "core-js": "3.23.5"
+    "core-js": "3.23.5",
+    "jquery": "^3.7.1"
   }
 }
